[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/menu/cloudPool/CloudPool.gd" type="Script" id=1]
[ext_resource path="res://sharedScripts/startSceneCloud.gd" type="Script" id=2]
[ext_resource path="res://Scenes/menu/cloudPool/cloud1.png" type="Texture" id=3]
[ext_resource path="res://Scenes/menu/cloudPool/cloud2.png" type="Texture" id=4]
[ext_resource path="res://Scenes/menu/cloudPool/cloud3.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 130, 70 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 114, 68.8435 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 80, 63.1579 )

[node name="CloudPool" type="Node2D"]

script = ExtResource( 1 )

[node name="Cloud1" type="KinematicBody2D" parent="." index="0" groups=[
"cloud",
]]

editor/display_folded = true
position = Vector2( 20, 340 )
scale = Vector2( 2.15625, 2.15625 )
input_pickable = false
collision_layer = 1
collision_mask = 0
collision/safe_margin = 0.08
script = ExtResource( 2 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]
moving = true
yPos = 770

[node name="cloud1" type="Sprite" parent="Cloud1" index="0"]

position = Vector2( 100, -60 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cloud1" index="1"]

position = Vector2( 100, -60 )
shape = SubResource( 1 )

[node name="Cloud2" type="KinematicBody2D" parent="." index="1" groups=[
"cloud",
]]

editor/display_folded = true
position = Vector2( 50, 770 )
scale = Vector2( 2.20312, 2.20312 )
input_pickable = false
collision_layer = 1
collision_mask = 0
collision/safe_margin = 0.08
script = ExtResource( 2 )
_sections_unfolded = [ "Collision", "Transform" ]
moving = false
yPos = 770

[node name="cloud1" type="Sprite" parent="Cloud2" index="0"]

position = Vector2( 100, -60 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cloud2" index="1"]

position = Vector2( 100, -60 )
shape = SubResource( 1 )

[node name="Cloud3" type="KinematicBody2D" parent="." index="2" groups=[
"cloud",
]]

editor/display_folded = true
position = Vector2( 340, 720 )
scale = Vector2( 2.45313, 2.45313 )
input_pickable = false
collision_layer = 1
collision_mask = 0
collision/safe_margin = 0.08
script = ExtResource( 2 )
_sections_unfolded = [ "Collision", "Transform" ]
moving = false
yPos = 720

[node name="cloud2" type="Sprite" parent="Cloud3" index="0"]

position = Vector2( 93.9474, -31.2286 )
scale = Vector2( 0.244321, 0.244321 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cloud3" index="1"]

position = Vector2( 95, -30 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Cloud4" type="KinematicBody2D" parent="." index="3" groups=[
"cloud",
]]

editor/display_folded = true
position = Vector2( 440, 740 )
scale = Vector2( 2.29688, 2.29688 )
input_pickable = false
collision_layer = 1
collision_mask = 0
collision/safe_margin = 0.08
script = ExtResource( 2 )
_sections_unfolded = [ "Collision", "Transform", "Z Index" ]
moving = false
yPos = 740

[node name="cloud2" type="Sprite" parent="Cloud4" index="0"]

position = Vector2( 110, -40 )
scale = Vector2( 0.278188, 0.278188 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cloud4" index="1"]

position = Vector2( 110, -40 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Cloud5" type="KinematicBody2D" parent="." index="4" groups=[
"cloud",
]]

editor/display_folded = true
position = Vector2( 100, 750 )
scale = Vector2( 2.375, 2.375 )
input_pickable = false
collision_layer = 1
collision_mask = 0
collision/safe_margin = 0.08
script = ExtResource( 2 )
_sections_unfolded = [ "Collision", "Transform" ]
moving = false
yPos = 750

[node name="cloud3" type="Sprite" parent="Cloud5" index="0"]

position = Vector2( 84.7277, -41.9954 )
scale = Vector2( 0.192488, 0.192488 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cloud5" index="1"]

position = Vector2( 83, -42 )
shape = SubResource( 3 )

[node name="Cloud6" type="KinematicBody2D" parent="." index="5" groups=[
"cloud",
]]

editor/display_folded = true
position = Vector2( 60, 720 )
scale = Vector2( 2.375, 2.375 )
input_pickable = false
collision_layer = 1
collision_mask = 0
collision/safe_margin = 0.08
script = ExtResource( 2 )
_sections_unfolded = [ "Collision", "Transform" ]
moving = false
yPos = 720

[node name="cloud3" type="Sprite" parent="Cloud6" index="0"]

position = Vector2( 102.738, -34.6734 )
scale = Vector2( 0.172149, 0.172149 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cloud6" index="1"]

position = Vector2( 96.8421, -33.6842 )
shape = SubResource( 3 )

[node name="CloudTimer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = true

[connection signal="removeItem" from="Cloud1" to="." method="_on_Cloud_removeItem"]

[connection signal="removeItem" from="Cloud2" to="." method="_on_Cloud_removeItem"]

[connection signal="removeItem" from="Cloud3" to="." method="_on_Cloud_removeItem"]

[connection signal="removeItem" from="Cloud4" to="." method="_on_Cloud_removeItem"]

[connection signal="removeItem" from="Cloud5" to="." method="_on_Cloud_removeItem"]

[connection signal="removeItem" from="Cloud6" to="." method="_on_Cloud_removeItem"]

[connection signal="timeout" from="CloudTimer" to="." method="initCloud"]


